--- a/flip-assistant/src/App.css
+++ b/flip-assistant/src/App.css
@@ -40,3 +40,26 @@
 .read-the-docs {
   color: #888;
 }
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 20px;
+  background-color: #cabe9b;
+}
+
+h1 {
+  color: #000000;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  background: #876f1d;
+  margin: 10px 0;
+  padding: 10px;
+  border: 1px solid #b4a36a;
+  border-radius: 4px;
+}
