--- a/flip-assistant/src/App.css
+++ b/flip-assistant/src/App.css
@@ -1,71 +1,39 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
-body {
-  font-family: Arial, sans-serif;
-  margin: 20px;
-  background-color: #cabe9b;
-}
-
-h1 {
-  color: #000000;
-}
-
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-li {
-  background: #876f1d;
-  margin: 10px 0;
-  padding: 10px;
+/* Table Styles */
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
   border: 1px solid #b4a36a;
-  border-radius: 4px;
+}
+
+th, td {
+  padding: 10px;
+  text-align: left;
+  border: 1px solid #b4a36a;
+}
+
+th {
+  background-color: #3d301f;
+  color: #fff;
+  cursor: pointer;
+}
+
+tr:nth-child(even) {
+  background-color: #38372f;
+  color: #fff;
+}
+
+tr:hover {
+  background-color: #f1e4a6;
+  color:#3d301f
 }
 
 .filters {
   margin-bottom: 20px;
+  background-color: #3d301f;
+  padding: 15px;
+  border-radius: 8px;
+  color: white;
 }
 
 .filters label {
@@ -74,31 +42,44 @@ li {
 
 .filters input {
   margin-right: 20px;
-  padding: 5px;
+  padding: 8px;
   border: 1px solid #ccc;
   border-radius: 4px;
+  width: 150px;
+}
+
+button {
+  padding: 8px 12px;
+  background-color: #876f1d;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin: 10px;
+  border-radius: 4px;
+}
+
+button:hover {
+  background-color: #b4a36a;
 }
 
 .pagination {
   margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .pagination button {
-  margin: 0 5px;
   padding: 5px 10px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  background-color: #fff;
+  background-color: #3d301f;
+  color: white;
   cursor: pointer;
-}
-
-.pagination button:disabled {
-  background-color: #ccc;
-  cursor: not-allowed;
+  border: 1px solid #b4a36a;
+  border-radius: 4px;
 }
 
 .pagination select {
   padding: 5px;
-  border: 1px solid #ccc;
   border-radius: 4px;
+  border: 1px solid #b4a36a;
 }
